--- a/requirements.yml
+++ b/requirements.yml
@@ -217,9 +217,9 @@
   path: roles
   version: v1.0.5
 
-- src: https://github.com/fgci-org/ansible-role-ohpc-repo
+- src: https://github.com/Gehock/ansible-role-ohpc-repo
   path: roles
-  version: v0.1
+  version: v0.1-1
 
 - src: https://github.com/AaltoScienceIT/ansible-role-ohpc-setup
   path: roles
