--- a/admin_ohpc.yml
+++ b/admin_ohpc.yml
@@ -16,15 +16,15 @@
   - { role: dns, tags: [ 'dns' ] }
   - { role: ansible-role-yum, tags: [ 'yum', 'repos' ] }
   - { role: ansible-role-ohpc-repo, tags: [ 'yum', 'repos', 'ohpc' ] }
-  - { role: network_interface, tags: [ 'network' ],
-    when: internal_interface in ansible_interfaces and
-          external_interface in ansible_interfaces }
-  - { role: ip_forwarder, tags: [ 'network' ],
-    when: internal_interface is defined and
-          external_interface is defined and
-          internal_net is defined and
-          internal_interface in ansible_interfaces and
-          external_interface in ansible_interfaces }
+  # - { role: network_interface, tags: [ 'network' ],  # setting up network manually for now
+  #   when: internal_interface in ansible_interfaces and
+  #         external_interface in ansible_interfaces }
+  # - { role: ip_forwarder, tags: [ 'network' ],
+  #   when: internal_interface is defined and
+  #         external_interface is defined and
+  #         internal_net is defined and
+  #         internal_interface in ansible_interfaces and
+  #         external_interface in ansible_interfaces }
   - { role: ansible-role-hosts-int, tags: [ 'hosts'] }
   # - { role: ansible-role-ferm-firewall, tags: [ 'firewall', 'network' ] }  # broken
   - { role: ansible-role-chrony, tags: [ 'ntp', 'chrony' ] }
@@ -32,16 +32,16 @@
   - { role: ansible-role-rsyslog, tags: [ 'rsyslog' ] }
   - { role: ansible-role-aliases, tags: [ 'aliases', 'email' ] }
   - { role: ansible-role-sshd, tags: [ 'sshd', 'ssh' ] }
-  # - { role: ansible-role-smartd, tags: [ 'smartd' ] }  # -C
+  # - { role: ansible-role-smartd, tags: [ 'smartd' ] }  # -C, no-op when running on a virtualized platform
   # - { role: ansible-role-dell, tags: [ 'dell' ] }  # skip
   # - { role: ansible-role-rdma, tags: [ 'rdma', 'infiniband' ] }  # skip
   - { role: ansible-role-postfix, tags: [ 'postfix', 'mail' ] }
-  - { role: ansible-role-autofs, tags: [ 'autofs' ] }
+  # - { role: ansible-role-autofs, tags: [ 'autofs' ] }  # skipping for now
   # - { role: ansible-role-pdsh-genders, tags: [ 'pdsh', 'genders' ] }  # broken
   - { role: ansible-role-systemd-journal, tags: [ 'systemd', 'journal', 'journald' ] }
   # - { role: ansible-role-slurm, tags: [ 'slurm' ] }
 #  - { role: ansible-role-flowdock, tags: [ 'flowdock', 'always' ] }
-  # - { role: ansible-role-ohpc-setup, tags: [ 'ohpc' ] }  # -C
+  - { role: ansible-role-ohpc-setup, tags: [ 'ohpc' ] }  # -C
 
 
 # Local addons to this playbook
