--- a/requirements.yml
+++ b/requirements.yml
@@ -73,9 +73,9 @@
   path: roles
   version: v1.4.5
 
-- src: https://github.com/CSCfi/ansible-role-yum
+- src: https://github.com/mhakala/ansible-role-yum
   path: roles
-  version: v1.5.5
+  # version: v1.5.5-1
 
 - src: https://github.com/CSCfi/ansible-role-flowdock
   path: roles
